[tool.poetry]
name = "lyngdorf"
version = "0.5.0"
description = "Library to control a Lyngdorf A/V processor"
authors = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",      # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    "Intended Audience :: Developers",      # Define that your audience are developers
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://github.com/fishloa/lyngdorf"
Issues = "https://github.com/fishloa/lyngdorf/issues"

[tool.poetry.dependencies]
python = "^3.11"
attrs = ">=21.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^26.0.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
